tests/purs/failing/OperatorAliasNoExport.out
Error found:
in module [33mTest[0m
at tests/purs/failing/OperatorAliasNoExport.purs:2:1 - 7:13 (line 2, column 1 - line 7, column 13)

  An export for [33m(?!)[0m requires the following to also be exported:

    [33mwhat[0m



See https://github.com/purescript/documentation/blob/master/errors/TransitiveExportError.md for more information,
or to contribute content related to this error.

